add approved functionality

--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Affiliate/_CreateOrUpdate.Orders.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Affiliate/_CreateOrUpdate.Orders.cshtml
@@ -123,9 +123,10 @@
                     var color;
                     switch (row.OrderStatusId) {
                         case 10: color = 'yellow'; break;
-                        case 20: color = 'blue'; break;
+                        case 20: color = 'yellow'; break;
                         case 30: color = 'green'; break;
                         case 40: color = 'red'; break;
+                        case 50: color = 'blue'; break;
                     }
 
                     return '<span class="grid-report-item ' + color + '">' + data + '</span >';
