--- a/src/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/_OrderReviewData.cshtml
+++ b/src/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/_OrderReviewData.cshtml
@@ -3,7 +3,7 @@
 {
     <div class="order-review-data row">
         <div class="billing-info-wrap col-sm-6 col-md-6">
-            <div hidden class="billing-info">
+            <div class="billing-info">
                 <div class="title">
                     <strong>@T("Order.BillingAddress")</strong>
                 </div>
@@ -285,7 +285,7 @@
                         }
                     </ul>
                 </div>
-                <div class="shipping-method-info">
+                <div hidden class="shipping-method-info">
                     <div class="title">
                         <strong>@T("Order.Shipping")</strong>
                     </div>
