removed danger class in coupon box

--- a/src/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/_DiscountBox.cshtml
+++ b/src/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/_DiscountBox.cshtml
@@ -16,7 +16,7 @@
             </div>
             @foreach (var message in Model.Messages)
             {
-                <div class="@(Model.IsApplied ? "message-success" : "message-failure") message bg-danger">
+                <div class="@(Model.IsApplied ? "message-success" : "message-failure")">
                     @message
                 </div>
             }
