--- a/src/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Presentation/Nop.Web/Themes/NobleTheme/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -181,7 +181,7 @@
                                 @if (!string.IsNullOrEmpty(item.Discount))
                                 {
                                     <div class="discount">
-                                        @T("ShoppingCart.ItemYouSave"): , item.Discount)
+                                        @T("ShoppingCart.ItemYouSave", item.Discount)
                                     </div>
                                     if (item.MaximumDiscountedQty.HasValue)
                                     {
